[tool.poetry]
name = "eda-rossmann"
version = "0.1.0"
description = ""
authors = ["Thales Luiz <thalesluizbraga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
inflection = "^0.5.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
